--- a/hangman/src/main/resources/application.properties
+++ b/hangman/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port = 8889
+server.port = 8181
 
 spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
@@ -14,3 +14,6 @@ spring.jpa.hibernate.ddl-auto = update
 
 #allows hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
+restricted_username = root
