--- a/hangman/src/main/resources/application.properties
+++ b/hangman/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 restricted_username = root
+security.user.password = admin
