--- a/onlineLibrary/src/main/resources/application.properties
+++ b/onlineLibrary/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port = 8282
+
 spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
@@ -15,3 +17,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 restricted_username = root
+security.user.password = admin
