--- a/onlineLibrary/src/main/resources/application.properties
+++ b/onlineLibrary/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 server.port = 8282
 
-spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:~/test1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
+
+security.headers.frame=false
 
 # show or not log for each sql query
 spring.jpa.show-sql = true
